<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>calib_image_saver</name>
  <version>0.0.0</version>
  <description>The calib_image_saver package</description>
  <maintainer email="px@todo.todo">px</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <build_depend>eigen</build_depend>
  <build_depend>opencv</build_depend>

  <exec_depend>eigen</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
